# Multifunctional-Chalcogenide-MD

./: .devenv.flake.nix  .gitignore  README.md  devenv.nix  devenv.yaml  package-lock.json  pyproject.toml  vercel.json
.devenv/: input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-16-link  shell-4-link  shell-9-link
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: index.d.ts
.svelte-kit/vercel-tmp/: manifest.js
api/: main.py
api/json/bulk/: Bi6Pb3Te12-mp-1227398.json  P9Sn12-mp-27410.json  S12Sb8-mp-2809.json  Sb14-mp-1179618.json  Sb2-mp-632286.json  Sb24Te9-mp-12826.json  Sb8Te12-mp-1078904.json  Te3-mp-1178932.json  Te4-mp-1064307.json
api/json/mono/: Bi2PbTe4-P_3m1.json  Bi2Te3-P3m1.json  Bi2Te3-P_3m1.json  Bi4-Cmcm.json  BiInSe3-P3m1.json  GeTe-P_6m2-1.json  S2Sb2-P_1-33.json  Sb2Se2Te-P_3m1.json  Sb4Te6-P2_c-31.json  (+1 more)
app/: package-lock.json  package.json
app/api/: get_all.py  get_plotinfo_from_hash.py  requirements.txt
app/lib_python/: db.py  types.py
backend/: .env  config.py  db.py  main.py
backend/json/: Plots.py
backend/migration/: v3_populate_database_from_json.py  v4_create_database.sql  v5_create_database.sql  v5_populate_database_from_json.py
backend/routers/: v2_api.py
developer_api/: .env  main.py  requirements.txt
developer_api/migration/: v1_populate_database_from_json.py  v5_create_database.sql
developer_api/routers/: v1_api.py  v2_api.py
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/api/: main.py
json/bulk/: Bi2Pb2Se5-mp-570930.json  Bi6Se6Te3-mp-1227356.json  Cd3Pb9Se12-mp-1226877.json  Ge12-mp-137.json  Ge3Sb3Te9-mp-1224339.json  Ge4-mp-12093.json  Ge6Te2-mp-976053.json  GeSb4Te7-mp-29641.json  Pb3Sb6Te12-mp-31507.json  Sb2-mp-1179605.json
json/mono/: Bi2GeTe4-P_3m1.json  BiSbTe3-P3m1.json  Ge2S2-Pmmn-6.json  Sb2Te3-P_3m1.json  Sb4Te6-P2_m-15.json
migration/: v1_create_database.sql  v3_create_database.sql  v4_populate_database_from_json.py  v5_populate_database_from_json.py
(+208 files in other folders)
